# wallet

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  pyproject.toml
src/: accounts.py  conftest.py  test_accounts.py  test_wallet.py  wallet.py
src/operations/: amount.py  currencies.py  operations.py  tags.py  types.py
src/presentation/telegram/: configure.py  main.py  settings.py
src/presentation/telegram/handlers/: start.py
