[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["Nurdaulet Turar <nurdaulet@byallmeans.work>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
skip_gitignore = true
